# plex-ani-sync

./: .air.toml  .dockerignore  .gitignore  Cargo.toml  Dockerfile  PlexAnilistSync.xml  ReadMe.md  anilist.py  config.py  docker-compose.yml  go.mod  go.sum  justfile  main.go  main.py  manualSync.py  mapper.py  plex.py  requirements.txt  sync_runner.py  tailwind.config.js  utils.py
.github/workflows/: Docker Image CI.yml
Models/: seasonmapping.py
Old files/: anilist.py  requirements.txt  sync_runner.py  utils.py
Old files/Models/: seriesmapping.py  summary.py  user.py
api/: server.go  setupFormHandlers.go
api/routes/: routes.go
db/migrations/: 000001_create_config_table.sql.up.sql  000002_create_plex_config.up.sql
db/sqlc/: queries.sql  sqlc.yaml
docker/: docker-compose.yml
frontend/: .env  .env.development  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  Routes.tsx  utils.ts
internal/db/: db.go  db_test.go  dbmigrations.go
internal/mediaHost/: mediaHost.go  plex.go  plexAuth.go  plexAuth_test.go
internal/plex/: plex.go  plexAuth.go  plexAuth_test.go  plex_test.go
internal/plexAuth/: plexAuth.go  plexAuth_test.go
internal/storage/: db.go  postgres.go  postgres_test.go  storage.go
internal/userManager/: userManager.go
internal/users/: users.go
migrations/: 1_init.sql  2_mapping.sql
server/: app.py  config.py  fileManager.py  go.mod  go.sum  main.go  main.py  main_old.go  requirements.txt  syncRunner.py  utils.py  wsgi.py
src/: main.rs  utils.rs
test_data/: anilist_responses.json
(+141 files in other folders)
