[package]
name = "plex-ani-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11.18", features = ["json", "trust-dns"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = {version = "1.28.2", features = ["full"]}
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls"] }
log = "0.4.17"
url = "2.3.1"
futures = "0.3.28"
anyhow = "1.0.71"
chrono = "0.4.26"

[dev-dependencies]
wiremock = "0.5.18"
